 ** Add support for Yubico OTP provisioning.
 ** PIV: Display more information about keys and certificates.
 ** PIV: Add output format for public key when generating keys.
 ** Desktop: Window hidden/shown state no longer saved when closing the app,
    use --hidden to start the app in a hidden to systray state.
 ** Windows: Add option to launch Windows Settings for FIDO management.
 ** Android: Increase read timeout for NFC, improving compatibility with older YubiKeys.

* Version 6.3.1 (released 2023-12-12)
 ** Add command line options: --hidden/--shown, --log-file FILE.
 ** Disable autocorrect in text fields.
 ** Improve UI for toggling USB interfaces on YubiKey <= 4.
 ** OATH: Fix displaying of credentials with empty (but not null) issuer.
 ** PIV: Fix "Save" button not updating when changing Management Key.
 ** FIDO: Improved handling of forcePinChange.
 ** Add keyboard shortcut to calculate new code (Ctrl/Cmd + R).
 ** Android: Support loading QR code from file.
 ** Android: Add a "Do nothing" option to NFC tap.
 ** Android: Improve handing of USB device removal.

* Version 6.3.0 (released 2023-09-04)
 ** Add support for importing accounts through QR codes from Google Authenticator.
 ** Add community translations for French, Japanese, German and Polish languages.
 ** Improve user interface with new Material UI widgets.
 ** Bug fixes and improvements based on user feedback.
 ** Desktop: Add support for PIV.
 ** Android: Update Android 14 compatibility.

* Version 6.2.0 (released 2023-04-19)
 ** Add support for custom account icons.
 ** Desktop: Add systray icon for quick access to pinned accounts.
 ** Win/Mac: Remember window position between launches.
 ** UI: Swap click-area for OATH accounts (click on code button to open single-account view, double-click on account to copy code).
 ** Android: Better support for large screens (landscape, multi-window).
 ** Desktop: Fix issues with keyboard shortcuts sometimes not working and add new shortcuts.