@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # This field is updated by running ./set-version.py <version>
 # DO NOT MANUALLY EDIT THIS!
-version: 6.4.0+60400
+version: 6.4.0+60401
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
